# Digital-Weather

./: LICENSE  README  README.md  digital-weather_0.1.0_x64_en-US.msi  package-lock.json
Digital-Weather/: package.json  pnpm-lock.yaml  tsconfig.json
Digital-Weather/backend/: pyproject.toml
Digital-Weather/backend/app/: main.py
Digital-Weather/scripts/: README.md  list_users.py
Digital-Weather/src/: App.tsx  global.d.ts
Digital-Weather/src-tauri/: Cargo.toml  devices.geojson  tauri.conf.json  users.db
Digital-Weather/src-tauri/src/: main.rs
Digital-Weather/src/pages/: Dashboard.tsx  Login.tsx  MapView.tsx  Register.tsx
client/: package-lock.json  package.json
client/src/: App.js  index.css
client/src/pages/: about.jsx  contact.jsx  login.jsx  map.jsx  register.jsx
flask-server/: add_devices.py  auth.py  coordinate_converter.py  device_generator.py  heatmap_counter.py  init_db.py  locations.db  models.py  server.py
flask-server/instance/: database.db
flask-server/userLogic/: auth.py  extensions.py  models.py
