[tool.poetry]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for Tauri app"
authors = ["Your Name <you@example.com>"]
packages = []      # no package, just app
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.117.1"
uvicorn = "^0.37.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
